Edited the greetings text

--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,29 @@
     <title>My Webpage!</title>
   </head>
   <body>
-    <h1>Hello word!</h1>
+    <img src="cat.jpeg" alt="Cat" width=50%>
+    <h1>Ciao world!</h1>
+    <h2>A pretty large header</h2>
+    <h3>Medium one</h3>
+    <h4>I am small</h4>
+    <h5>I am very small</h5>
+    <h6>I am the smallest.</h6>
+    <hr>
+
+    <ul>
+      <h3>An unordere list</h3>
+      <li>List item</li>
+      <li>List item</li>
+      <li>List item</li>
+    </ul>
+
+    <ol>
+      <h3>Ordered list</h3>
+
+      <li>List item</li>
+      <li>List item</li>
+      <li>List item</li>
+    </ol>
+
   </body>
-</html>>
+</html>
