--- a/hello.html
+++ b/hello.html
@@ -7,11 +7,7 @@
   <body>
     <img src="cat.jpeg" alt="Cat" width=50%>
     <h1>Ciao world!</h1>
-    <h2>A pretty large header</h2>
-    <h3>Medium one</h3>
-    <h4>I am small</h4>
-    <h5>I am very small</h5>
-    <h6>I am the smallest.</h6>
+    <h2>This is a new feature.</h2>
     <hr>
 
     <ul>
