added second feature

--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,7 @@
     <img src="cat.jpeg" alt="Cat" width=50%>
     <h1>Ciao world!</h1>
     <h2>This is a new feature.</h2>
+    <h3>This is my second feature on a second branch.</h3>
     <hr>
 
     <ul>
